--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -190,8 +190,14 @@
         <artifactId>mybatis-spring</artifactId>
         <version>1.3.0</version>
     </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
-    <!-- JSTL -->
+        <!-- JSTL -->
 
     </dependencies>
 
