--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -191,11 +191,17 @@
         <version>1.3.0</version>
     </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
 
         <!-- JSTL -->
 
