--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -102,7 +102,11 @@
     </dependency>
 
     <!-- MySQL依赖 end -->
-
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
 
 
     <!-- 加入MyBatis 依赖 start -->
