--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -84,6 +84,14 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <!--<resources>-->
+            <!--<resource>-->
+                <!--<directory>src/main/resources</directory>-->
+                <!--<includes>-->
+                    <!--<include>mybatis/mapper/*.xml</include>-->
+                <!--</includes>-->
+            <!--</resource>-->
+        <!--</resources>-->
     </build>
     <dependencies>
     <dependency>
@@ -177,6 +185,21 @@
         <artifactId>spring-test</artifactId>
         <version>${spring.version}</version>
     </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-databind</artifactId>-->
+            <!--<version>2.1.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-core</artifactId>-->
+            <!--<version>2.1.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-annotations</artifactId>-->
+            <!--<version>2.1.0</version>-->
+        <!--</dependency>-->
 
     <!-- 引入Spring 依赖 end -->
 
